updated to fix issue with phaser